<resources>
    <string name="app_name">Quantispend</string>
    <string name="app_title">Quantispend</string>
    <string name="add_income">Add Income</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="transaction">Transaction</string>
    <string name="available_bal">Available balance</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter password</string>
    <string name="sign_up_text">Don\'t have an account? Sign up here</string>
    <string name="login_text">Welcome back </string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quantispend</string>
    <string name="nav_header_subtitle">Welcome Back</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>

    <string name="default_username">Username</string>
    <string name="default_email">Username email</string>
    <string name="username_updated">Username updated</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="notifications_disabled">Notifications Disabled</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="username_load_failed">Username load failed</string>

</resources>