<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/navy">

    <!-- Title -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:src="@drawable/header_pic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/signup_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/l_grey"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:textColorHint="@color/l_grey"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/signup_confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/re_password"
        android:textColorHint="@color/l_grey"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/l_red"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/back_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Already have an account? Log in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>
